$Id$

			 Commons IO Package
			    Version 1.3.2
			   Release Notes


INTRODUCTION:

Commons IO is a package of Java utility classes for java.io's hierarchy.  
Classes in this package are considered to be so standard and of such high 
reuse as to justify existence in java.io.

Commons IO contains utility classes, stream implementations, file filters, 
and endian transformation classes.


Compatibility with 1.3.1
----------------------
Binary compatible - Yes

Source compatible - Yes

Semantic compatible - Yes


Compatibility with 1.3
----------------------
Binary compatible - No
  See [IO-113]

Source compatible - No
  See [IO-113]

Semantic compatible - Yes


Enhancements since 1.3.1
------------------------

- Created the FileCleaningTracker, basically a non-static version of the
  FileCleaner, which can be controlled by the user. [IO-116]
- The FileCleaner is deprecated.


Bug fixes from 1.3.1
--------------------

- Some tests, which are implicitly assuming a Unix-like file system, are
  now skipped on Windows. [IO-115]
- EndianUtils
  - Both readSwappedUnsignedInteger(...) methods could return negative 
    numbers due to int/long casting. [IO-117]


Bug fixes from 1.3
------------------

- FileUtils
  - NPE in openOutputStream(File) when file has no parent in path [IO-112]
  - readFileToString(File) is not static [IO-113]


Feedback
--------
Open source works best when you give feedback:
http://jakarta.apache.org/commons/io/

Please direct all bug reports to JIRA
http://issues.apache.org/jira/browse/IO

Or subscribe to the commons-user mailing list (prefix emails by [io])
http://jakarta.apache.org/site/mail.html

The Commons-IO Team