@@ -39,7 +39,7 @@ The <action> type attribute can be add,update,fix,remove.
   </properties>
 
   <body>
-    <release version="1.3.2" date="2007-May-16">
+    <release version="1.3.2" date="2007-Jul-02">
       <action dev="jochen" type="fix" issue="IO-115">
         Some tests, which are implicitly assuming a Unix-like file
         system, are now skipped on Windows.
