@@ -61,7 +61,9 @@ Enhancements since 1.3.1
 
 - Created the FileCleaningTracker, basically a non-static version of the
   FileCleaner, which can be controlled by the user. [IO-116]
-- The FileCleaner is deprecated.
+- The FileCleaner is deprecated. (For reasons of compatibility, the
+  deprecation warnings are hidden within the 1.3 branch. They'll be
+  visible, as of version 1.4.)
 
 
 Bug fixes from 1.3.1
